force-app/main/default/objects/Test_Case__c/fields/Job_Role_Function__c.field-meta.xml
<CustomField>
    <fullName>Job_Role_Function__c</fullName>
    <label>Job/Role/Function</label>
    <length>100</length>
    <type>Text</type>
</CustomField>