force-app/main/default/objects/Test_Case__c/fields/No__c.field-meta.xml
<CustomField>
    <fullName>No__c</fullName>
    <label>Sequence No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>