force-app/main/default/objects/Test_Case__c/fields/Passed_Steps__c.field-meta.xml
<CustomField>
    <fullName>Passed_Steps__c</fullName>
    <label>Passed Steps</label>
    <summaryFilterItems>
        <field>Test_Steps__c.Status__c</field>
        <operation>equals</operation>
        <value>Pass</value>
    </summaryFilterItems>
    <summaryForeignKey>Test_Steps__c.Test_Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>