force-app/main/default/objects/Test_Case__c/fields/Plan_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_End_Date__c</fullName>
    <label>Plan End Date</label>
    <summarizedField>Test_Steps__c.Plan_End_Date__c</summarizedField>
    <summaryForeignKey>Test_Steps__c.Test_Case__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>