force-app/main/default/objects/Test_Case__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sprint</label>
    <referenceTo>Sprint__c</referenceTo>
    <relationshipLabel>Test Cases</relationshipLabel>
    <relationshipName>Test_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>