force-app/main/default/objects/Test_Case__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <length>250</length>
    <type>Text</type>
</CustomField>