force-app/main/default/objects/Test_Case__c/fields/Test_Pre_Condition__c.field-meta.xml
<CustomField>
    <fullName>Test_Pre_Condition__c</fullName>
    <label>Pre-condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>