force-app/main/default/objects/Test_Case__c/fields/Test_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Test_Scenario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Scenario</label>
    <referenceTo>Test_Scenario__c</referenceTo>
    <relationshipLabel>Test Cases</relationshipLabel>
    <relationshipName>Test_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>