force-app/main/default/objects/Test_Case__c/fields/Total_Test_Steps__c.field-meta.xml
<CustomField>
    <fullName>Total_Test_Steps__c</fullName>
    <label>Total Test Steps</label>
    <summaryForeignKey>Test_Steps__c.Test_Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>