force-app/main/default/objects/Test_Case__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DEV</fullName>
                <default>true</default>
                <label>DEV</label>
            </value>
            <value>
                <fullName>HMG</fullName>
            </value>
            <value>
                <fullName>PROD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>