force-app/main/default/objects/Test_Case__c/fields/UnCompleted_Steps__c.field-meta.xml
<CustomField>
    <fullName>UnCompleted_Steps__c</fullName>
    <formula>Total_Test_Steps__c - Passed_Steps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UnCompleted Steps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>